--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,43 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 0 auto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.nav-links{
-  display:flex;
+#Recordings {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-links {
+  display: flex;
   justify-content: space-around;
   list-style: none;
 }
 
 .page-header {
-background-color: pink;
-display: flex;
-justify-content: center;
-justify-content: center;}
+  background-color: pink;
+  display: flex;
+  justify-content: center;
+}
 
-.sound-block{
-  display:flex;
-  align-items: center;
-  padding:10px 0px;
+.sound-block {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0px;
 }
 
 .song-chords {
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left:20px;
-  padding-bottom:10px;
+  padding-left: 50px;
+  padding-bottom: 10px;
   word-spacing: 20px;
+  border-bottom-style:inset;
 }
