--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,16 @@
 body {
-  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-#Recordings {
-  display: flex;
-  flex-direction: column;
-}
+
 
 .nav-links {
   display: flex;
@@ -26,11 +24,7 @@ code {
   justify-content: center;
 }
 
-.sound-block {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0px;
-}
+
 
 .song-chords {
   display: flex;
@@ -40,4 +34,10 @@ code {
   padding-bottom: 10px;
   word-spacing: 20px;
   border-bottom-style:inset;
+}
+
+.sound-block{
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
