--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ code {
 }
 
 
-
 .nav-links {
   display: flex;
   justify-content: space-around;
@@ -25,7 +24,6 @@ code {
 }
 
 
-
 .song-chords {
   display: flex;
   flex-direction: column;
@@ -36,8 +34,14 @@ code {
   border-bottom-style:inset;
 }
 
-.sound-block{
+
+ .sound-block{
   display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
+  margin:0 auto;
+
+
 }
